--- a/midterm/p3.tex
+++ b/midterm/p3.tex
@@ -6,5 +6,8 @@
   Formally prove that your CFG is sound and complete.
 \end{problem}
 \begin{Answer}
-
+  \begin{align*}
+    S &\to 0S0 \mid 0B1 \mid 1B0 \mid 1S1 \\
+    B &\derives 0B0 \mid 0B1 \mid 1B0 \mid 1B1 \mid \eps
+  \end{align*}
 \end{Answer}
